--- a/public/css/app.css
+++ b/public/css/app.css
@@ -34,7 +34,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Source Sans Pro", sans-serif;
+  --font-family-sans-serif: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -66,7 +66,7 @@ section {
 
 body {
   margin: 0;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
@@ -6141,7 +6141,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -6266,7 +6266,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -10653,5 +10653,102 @@ a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6;
   }
+}
+
+* {
+  transition: 0.2s;
+}
+
+nav #logo {
+  height: 30px;
+  margin-left: 5vw;
+  margin-top: 2.5vw;
+}
+
+p > a {
+  font-weight: bold;
+  cursor: pointer;
+  color: inherit;
+  text-decoration: none;
+}
+
+p > a:hover {
+  color: #e3342f;
+  text-decoration: none;
+}
+
+main {
+  width: 90vw;
+  margin-left: 5vw;
+  padding-bottom: 30px;
+  display: grid;
+  grid-template-rows: 120px auto;
+  grid-template-columns: 37.5vw 5vw 47.5vw;
+}
+
+main #description {
+  max-width: 550px;
+  grid-row: 2/3;
+  grid-column: 1/2;
+}
+
+main #description h1 {
+  font-weight: bold;
+}
+
+main #description h5 {
+  color: gray;
+}
+
+main #form-with-tabs {
+  grid-column: 1/2;
+  margin-top: 1.5em;
+}
+
+main #form-with-tabs #tabs {
+  display: inline-flex;
+  flex-wrap: nowrap;
+  align-items: flex-end;
+  margin-bottom: 0;
+}
+
+main #form-with-tabs #tabs .tab {
+  border: 1px solid #d8dadc;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+  border-bottom: none;
+  padding: 0.2em 0.5em;
+  cursor: pointer;
+}
+
+main #form-with-tabs #tabs .tab.selected {
+  font-weight: bold;
+  border-color: #333333;
+  background-color: #333333;
+  color: white;
+}
+
+main #form-with-tabs #tabs .tab:hover {
+  background-color: #333333;
+  color: white;
+}
+
+main #form-with-tabs #form-holder {
+  border: 1px solid #d8dadc;
+  border-radius: 8px;
+  padding: 1.2em;
+  border-color: #333333;
+  border-top-left-radius: 0;
+  border-width: 2px;
+}
+
+main #homepage-graphic {
+  grid-column: 3/4;
+  grid-row: 1/3;
+}
+
+main #homepage-graphic img {
+  width: 100%;
+  display: block;
 }
 
