--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,34 @@
-
 // Variables
 @import 'variables';
+@import 'elements';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Global stuff
+* {
+  transition:0.2s;
+}
 
+nav {
+  #logo {
+    height:30px;
+    margin-left:5vw;
+    margin-top:2.5vw;
+  }
+}
 
-// Other pages
+p > a {
+  font-weight:bold;
+  cursor:pointer;
+  color:inherit;
+  text-decoration:none;
+
+  &:hover {
+    color:$red;
+    text-decoration:none;
+  }
+}
+
+// Add styles for each page
 @import 'landing';
