--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -73,3 +73,6 @@ p > a {
 // Add styles for each page
 @import 'landing';
 @import 'dashboard';
+@import 'alerts';
+@import 'subscribers';
+@import 'users';
