--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+*.active small {
+  color: white !important;
+}
+
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -10791,6 +10795,72 @@ main #homepage-graphic img {
   display: block;
 }
 
+.message {
+  max-width: 255px;
+  word-wrap: break-word;
+  margin-bottom: 12px;
+  line-height: 24px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", "Source Sans Pro", sans-serif;
+}
+
+.message:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.clear {
+  clear: both;
+}
+
+.from-them {
+  position: relative;
+  padding: 10px 20px;
+  background: #E5E5EA;
+  border-radius: 25px;
+  color: black;
+  float: left;
+}
+
+.from-them:before {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  bottom: -2px;
+  left: -7px;
+  height: 20px;
+  border-left: 20px solid #E5E5EA;
+  border-bottom-right-radius: 16px 14px;
+  -webkit-transform: translate(0, -2px);
+}
+
+.from-them:after {
+  content: "";
+  position: absolute;
+  z-index: 3;
+  bottom: -2px;
+  left: 4px;
+  width: 26px;
+  height: 20px;
+  background: white;
+  border-bottom-right-radius: 10px;
+  -webkit-transform: translate(-30px, -2px);
+}
+
+.from-them#message-image {
+  clear: both;
+  display: none;
+  width: 100%;
+  max-width: 255px;
+  padding: 0;
+  -webkit-filter: brightness(0.99);
+          filter: brightness(0.99);
+}
+
+.from-them#message-image.inVue {
+  display: block;
+}
+
 #dashboard-main {
   grid-template-rows: 15vh auto;
 }
@@ -10818,6 +10888,7 @@ main #homepage-graphic img {
 
 #alert-app #alert-composer {
   grid-column: 1/2;
+  position: fixed;
 }
 
 #alert-app #alert-composer #test-message-btn {
@@ -10830,83 +10901,6 @@ main #homepage-graphic img {
   margin-right: 10%;
 }
 
-#alert-app #alert-preview #message-frame {
-  padding-top: 10px;
-  padding-bottom: 2em;
-  position: relative;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", "Source Sans Pro", sans-serif;
-  position: relative;
-}
-
-#alert-app #alert-preview #message-frame .message {
-  border-radius: 20px 20px 20px 20px;
-  margin: 30px 15px 10px;
-  padding: 15px 20px;
-  position: relative;
-}
-
-#alert-app #alert-preview #message-frame .message.to {
-  background-color: #2095FE;
-  color: #fff;
-  margin-left: 80px;
-}
-
-#alert-app #alert-preview #message-frame .message.to:after {
-  content: "Neon";
-  font-size: 0.7em;
-  color: #444444;
-  position: absolute;
-  top: -20px;
-  right: 0;
-}
-
-#alert-app #alert-preview #message-frame .message.from {
-  background-color: #E5E4E9;
-  color: #363636;
-  margin-right: 80px;
-}
-
-#alert-app #alert-preview #message-frame .message.from:after {
-  content: "Annenberg Media";
-  font-size: 0.7em;
-  color: #444444;
-  position: absolute;
-  top: -20px;
-  left: 0;
-}
-
-#alert-app #alert-preview #message-frame .message.to + .message.to,
-#alert-app #alert-preview #message-frame .message.from + .message.from {
-  margin-top: -7px;
-}
-
-#alert-app #alert-preview #message-frame .message.to + .message.to:after,
-#alert-app #alert-preview #message-frame .message.from + .message.from:after {
-  content: none;
-}
-
-#alert-app #alert-preview #message-frame .message:before {
-  border-color: #2095FE;
-  border-radius: 50% 50% 50% 50%;
-  border-style: solid;
-  border-width: 0 20px;
-  bottom: 0;
-  clip: rect(20px, 35px, 42px, 0px);
-  content: " ";
-  height: 40px;
-  position: absolute;
-  right: -50px;
-  width: 30px;
-  z-index: -1;
-}
-
-#alert-app #alert-preview #message-frame .message.from:before {
-  border-color: #E5E4E9;
-  left: -50px;
-  -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
-}
-
 #subscribers-page {
   width: calc(100% - 1rem);
 }
@@ -10914,14 +10908,26 @@ main #homepage-graphic img {
 #subscribers-page .delete-icon {
   width: auto;
   cursor: pointer;
-  opacity: 0.5;
 }
 
 #subscribers-page .delete-icon:hover {
   opacity: 1;
+  color: #e3342f;
 }
 
 #users-page {
   width: calc(100% - 1rem);
+}
+
+#history-app {
+  width: calc(100% - 1rem);
+}
+
+#history-app #message-list i {
+  cursor: pointer;
+}
+
+#history-app #message-detail .messages {
+  width: 255px;
 }
 
