--- a/resources/sass/_alerts.scss
+++ b/resources/sass/_alerts.scss
@@ -5,6 +5,7 @@
 
   #alert-composer {
     grid-column: 1 / 2;
+    position:fixed;
 
     #test-message-btn {
       font-weight:bold;
@@ -15,79 +16,5 @@
   #alert-preview {
     grid-column:2 / 3;
     margin-right:10%;
-
-    #message-frame {
-      // width:100%;
-      // min-height:150px;
-      // border:2px solid $darkgray;
-      // border-radius:8px;
-      // padding:1em;
-      padding-top: 10px;
-      padding-bottom:2em;
-      position: relative;
-      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Source Sans Pro",sans-serif;
-      position: relative;
-
-      .message {
-          border-radius: 20px 20px 20px 20px;
-          margin: 30px 15px 10px;
-          padding: 15px 20px;
-          position: relative;
-      }
-      .message.to {
-          background-color: #2095FE;
-          color: #fff;
-          margin-left: 80px;
-          &:after {
-              content: "Neon";
-              font-size:0.7em;
-              color:#444444;
-              position:absolute;
-              top:-20px;
-              right:0;
-          }
-      }
-      .message.from {
-          background-color: #E5E4E9;
-          color: #363636;
-          margin-right: 80px;
-          &:after {
-              content: "Annenberg Media";
-              font-size:0.7em;
-              color:#444444;
-              position:absolute;
-              top:-20px;
-              left:0;
-          }
-      }
-      .message.to + .message.to,
-      .message.from + .message.from {
-        margin-top: -7px;
-        &:after {
-          content: none;
-        }
-      }
-      .message:before {
-          border-color: #2095FE;
-          border-radius: 50% 50% 50% 50%;
-          border-style: solid;
-          border-width: 0 20px;
-          bottom: 0;
-          clip: rect(20px, 35px, 42px, 0px);
-          content: " ";
-          height: 40px;
-          position: absolute;
-          right: -50px;
-          width: 30px;
-          z-index: -1;
-      }
-      .message.from:before {
-          border-color: #E5E4E9;
-          left: -50px;
-          transform: rotateY(180deg);
-      }
-
-
-    }
   }
 }
