--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10733,13 +10733,14 @@ main {
   margin-left: 5vw;
   padding-bottom: 30px;
   display: grid;
-  grid-template-rows: 120px auto;
-  grid-template-columns: 37.5vw 5vw 47.5vw;
+  grid-template-rows: auto auto;
+  grid-template-columns: 40vw 5vw 45vw;
 }
 
 main #description {
   max-width: 550px;
-  grid-row: 2/3;
+  padding-top: 60px;
+  grid-row: 1/2;
   grid-column: 1/2;
 }
 
@@ -10749,11 +10750,13 @@ main #description h1 {
 
 main #description h5 {
   color: gray;
+  margin-bottom: 0;
 }
 
 main #form-with-tabs {
+  grid-row: 2/3;
   grid-column: 1/2;
-  margin-top: 1.5em;
+  margin-top: 0;
 }
 
 main #form-with-tabs #tabs {
@@ -10801,6 +10804,69 @@ main #homepage-graphic {
 main #homepage-graphic img {
   width: 100%;
   display: block;
+}
+
+@media only screen and (max-width: 1000px) {
+  #landingApp {
+    grid-template-rows: auto auto;
+    grid-template-columns: 55vw 5vw 30vw;
+  }
+
+  #landingApp #homepage-graphic {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 790px) {
+  #landingApp {
+    margin-top: 25px;
+    grid-template-rows: auto auto;
+    grid-template-columns: 30vw 60vw;
+  }
+
+  #landingApp #homepage-graphic {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  #landingApp #description {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    align-content: center;
+    padding: 5%;
+  }
+
+  #landingApp #form-with-tabs {
+    grid-column: 1/3;
+    grid-row: 2/3;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  #landingApp {
+    grid-template-rows: auto;
+    grid-template-columns: auto;
+  }
+
+  #landingApp #description {
+    grid-row: 1/2;
+    grid-column: auto;
+  }
+
+  #landingApp #homepage-graphic {
+    grid-row: 2/3;
+    grid-column: auto;
+  }
+
+  #landingApp #form-with-tabs {
+    grid-row: 3/4;
+    grid-column: auto;
+  }
+
+  #landingApp #form-with-tabs #admin-tab {
+    display: none;
+  }
 }
 
 .message {
