--- a/resources/sass/_landing.scss
+++ b/resources/sass/_landing.scss
@@ -3,12 +3,13 @@ main {
   margin-left:5vw;
   padding-bottom:30px;
   display:grid;
-  grid-template-rows:120px auto;
-  grid-template-columns:37.5vw 5vw 47.5vw;
+  grid-template-rows:auto auto;
+  grid-template-columns:40vw 5vw 45vw;
 
   #description {
     max-width:550px;
-    grid-row:2 / 3;
+    padding-top:60px;
+    grid-row:1 / 2;
     grid-column: 1 / 2;
 
     h1 {
@@ -17,12 +18,14 @@ main {
 
     h5 {
       color:gray;
+      margin-bottom:0;
     }
   }
 
   #form-with-tabs {
+    grid-row:2 / 3;
     grid-column: 1 / 2;
-    margin-top:1.5em;
+    margin-top:0;
 
     #tabs {
       display:inline-flex;
@@ -68,6 +71,69 @@ main {
     img {
       width:100%;
       display:block;
+    }
+  }
+}
+
+@media only screen and (max-width:1000px){
+  #landingApp {
+    grid-template-rows:auto auto;
+    grid-template-columns:55vw 5vw 30vw;
+
+    #homepage-graphic {
+      display:flex;
+      align-items:center;
+    }
+  }
+}
+
+@media only screen and (max-width:790px){
+  #landingApp {
+    margin-top:25px;
+    grid-template-rows:auto auto;
+    grid-template-columns:30vw 60vw;
+
+    #homepage-graphic {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+    }
+
+    #description {
+      grid-row:1 / 2;;
+      grid-column:2 / 3;
+      align-content:center;
+      padding:5%;
+    }
+
+    #form-with-tabs {
+      grid-column:1 / 3;
+      grid-row: 2 / 3;
+    }
+  }
+}
+
+@media only screen and (max-width:500px){
+  #landingApp {
+    grid-template-rows:auto;
+    grid-template-columns:auto;
+
+    #description {
+      grid-row:1 / 2;
+      grid-column:auto;
+    }
+
+    #homepage-graphic {
+      grid-row: 2 / 3;
+      grid-column:auto;
+    }
+
+    #form-with-tabs {
+      grid-row:3 / 4;
+      grid-column:auto;
+
+      #admin-tab {
+        display:none;
+      }
     }
   }
 }
